// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    3,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    "foo | 1 | 11",
                  ],
                },
                "group": "cmd",
                "type": "update",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "group": "cmd",
                        "type": "compute",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            4,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            12,
                          ],
                        },
                        "group": "cmd",
                        "type": "update",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
        Object {
          "data": Object {
            "data": Object {
              "runner": [Function],
            },
            "group": "cmd",
            "type": "run",
          },
          "group": "step",
          "type": "single",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: bar seq 2`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    3,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    "foo | 1 | 11",
                  ],
                },
                "group": "cmd",
                "type": "update",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "group": "cmd",
                        "type": "compute",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            4,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            12,
                          ],
                        },
                        "group": "cmd",
                        "type": "update",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: foo seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo",
          "runner": [Function],
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "fullName": "foo → *",
                  "runner": [Function],
                  "subtype": "event",
                },
                "group": "cmd",
                "type": "emit",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "group": "cmd",
                        "type": "compute",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "group": "cmd",
                        "type": "filter",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            3,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "foo | 1 | 11",
                          ],
                        },
                        "group": "cmd",
                        "type": "update",
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "reduce": [Function],
                                },
                                "group": "cmd",
                                "type": "compute",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "type": "filter",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "type": "filter",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Array [
                                    4,
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    12,
                                  ],
                                },
                                "group": "cmd",
                                "type": "update",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "runner": [Function],
                    },
                    "group": "cmd",
                    "type": "run",
                  },
                  "group": "step",
                  "type": "single",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo → *\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": \\"update\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"store\\": [
               3,
               null,
               null,
               null,
               null,
               \\"foo | 1 | 11\\"
             ]
           }
        },
        5. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": \\"compute\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": \\"update\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {
                   \\"store\\": [
                     4,
                     null,
                     null,
                     null,
                     null,
                     12
                   ]
                 }
              },
              5. Multi []
           ]
        ]
     ],
     *  Single {
        \\"type\\": \\"run\\",
        \\"group\\": \\"cmd\\",
        \\"data\\": {}
     }
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo → *\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": \\"update\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"store\\": [
               3,
               null,
               null,
               null,
               null,
               \\"foo | 1 | 11\\"
             ]
           }
        },
        5. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": \\"compute\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": \\"update\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {
                   \\"store\\": [
                     4,
                     null,
                     null,
                     null,
                     null,
                     12
                   ]
                 }
              },
              5. Multi []
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"emit\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"subtype\\": \\"event\\",
             \\"fullName\\": \\"foo → *\\"
           }
        },
        3. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": \\"compute\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": \\"filter\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": \\"update\\",
                 \\"group\\": \\"cmd\\",
                 \\"data\\": {
                   \\"store\\": [
                     3,
                     null,
                     null,
                     null,
                     null,
                     \\"foo | 1 | 11 | 101\\"
                   ]
                 }
              },
              5. Multi [
                 *  Seq [
                    1. Single {
                       \\"type\\": \\"compute\\",
                       \\"group\\": \\"cmd\\",
                       \\"data\\": {}
                    },
                    2. Single {
                       \\"type\\": \\"filter\\",
                       \\"group\\": \\"cmd\\",
                       \\"data\\": {}
                    },
                    3. Single {
                       \\"type\\": \\"filter\\",
                       \\"group\\": \\"cmd\\",
                       \\"data\\": {}
                    },
                    4. Single {
                       \\"type\\": \\"update\\",
                       \\"group\\": \\"cmd\\",
                       \\"data\\": {
                         \\"store\\": [
                           4,
                           null,
                           null,
                           null,
                           null,
                           18
                         ]
                       }
                    },
                    5. Multi []
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"filter\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": \\"update\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"store\\": [
         3,
         null,
         null,
         null,
         null,
         \\"foo | 1 | 11 | 101\\"
       ]
     }
  },
  3. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": \\"update\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"store\\": [
               4,
               null,
               null,
               null,
               null,
               18
             ]
           }
        },
        5. Multi []
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"filter\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": \\"update\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"store\\": [
         4,
         null,
         null,
         null,
         null,
         18
       ]
     }
  },
  3. Multi []
]"
`;

exports[`graphite: store1 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "type": "filter",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            3,
            [Function],
            [Function],
            [Function],
            [Function],
            "foo | 1 | 11 | 101",
          ],
        },
        "group": "cmd",
        "type": "update",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    4,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    18,
                  ],
                },
                "group": "cmd",
                "type": "update",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: store2 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "type": "filter",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            4,
            [Function],
            [Function],
            [Function],
            [Function],
            18,
          ],
        },
        "group": "cmd",
        "type": "update",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": \\"update\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"store\\": [
               5,
               null,
               null,
               null,
               null,
               3
             ]
           }
        },
        5. Multi [
           *  Single {
              \\"type\\": \\"run\\",
              \\"group\\": \\"cmd\\",
              \\"data\\": {}
           }
        ]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"filter\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": \\"update\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"store\\": [
         8,
         null,
         null,
         null,
         null,
         3
       ]
     }
  },
  3. Multi [
     *  Single {
        \\"type\\": \\"run\\",
        \\"group\\": \\"cmd\\",
        \\"data\\": {}
     }
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"filter\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": \\"update\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"store\\": [
         5,
         null,
         null,
         null,
         null,
         3
       ]
     }
  },
  3. Multi [
     *  Single {
        \\"type\\": \\"run\\",
        \\"group\\": \\"cmd\\",
        \\"data\\": {}
     }
  ]
]"
`;
